Add professions UI

--- a/ui/core/_individual_sim_ui.scss
+++ b/ui/core/_individual_sim_ui.scss
@@ -170,7 +170,7 @@
   text-align: left;
 }
 
-.rotation-section > div, .other-settings-section > div {
+.race-section > div, .rotation-section > div, .other-settings-section > div {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
