--- a/ui/core/_individual_sim_ui.scss
+++ b/ui/core/_individual_sim_ui.scss
@@ -20,6 +20,7 @@
 @import "./components/saved_data_manager";
 @import "./components/settings_menu";
 @import "./components/stat_weights_action";
+@import "./talents/hunter_pet";
 @import "./talents/glyphs_picker";
 @import "./talents/talents_picker";
 
@@ -229,6 +230,14 @@
 }
 
 .talents-tab {
+}
+
+.player-pet-toggle {
+	display: flex;
+	justify-content: center;
+}
+.player-pet-toggle > * {
+	margin: 0 10px;
 }
 
 .talents-tab-content {
