--- a/ui/core/talents/_talents_picker.scss
+++ b/ui/core/talents/_talents_picker.scss
@@ -42,9 +42,9 @@
 .talent-tree-main {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(9, 1fr);
+  // grid-template-rows: repeat(9, 1fr); // Set in js
   background-size: 100% 100%;
-  height: 72vh;
+  // height: 72vh; // Set in js
   width: 32vh;
   border-radius: 4px;
 }
