--- a/ui/warlock/_sim.scss
+++ b/ui/warlock/_sim.scss
@@ -4,7 +4,7 @@
 	--theme-color-background: rgb(24, 18, 27);
 	--theme-color-background-raw: 24, 18, 27;
 	--theme-background-image: url('/wotlk/assets/warlock_background.jpg');
-	--theme-background-opacity: 0.93;
+	--theme-background-opacity: 0.87;
 	--main-text-color: White;
 }
 
@@ -12,13 +12,15 @@
 .warlock-sim-ui .self-buffs-section {
   grid-template-columns: repeat(2, 1fr);
 }
+.warlock-sim-ui .pets-section {
+  grid-template-columns: repeat(2, 1fr);
+}
 .warlock-sim-ui .buffs-section {
   grid-template-columns: repeat(5, 1fr);
 }
 .warlock-sim-ui .debuffs-section {
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(5, 1fr);
 }
-
-.warlock-sim-ui .warlock-summon-picker {
-	width: 50px;
+.warlock-sim-ui .spell-section {
+  grid-template-columns: repeat(5, 2fr);
 }
