Refactor buffs UI

--- a/ui/core/_individual_sim_ui.scss
+++ b/ui/core/_individual_sim_ui.scss
@@ -13,6 +13,7 @@
 @import "./components/icon_picker";
 @import "./components/importers";
 @import "./components/log_runner";
+@import "./components/multi_icon_picker";
 @import "./components/number_list_picker";
 @import "./components/number_picker";
 @import "./components/raid_sim_action";
