--- a/ui/core/components/_multi_icon_picker.scss
+++ b/ui/core/components/_multi_icon_picker.scss
@@ -1,19 +1,13 @@
-.multi-icon-picker-root {
+.multi-icon-picker-dropdown-root {
   border: 2px solid dimgray;
   transition: $sim-transitions;
 	margin: 2px;
 }
 
-.multi-icon-picker-root a {
-	height: 45px;
-	width: 45px;
-	display: block;
-}
-
-.multi-icon-picker-root.active {
+.multi-icon-picker-dropdown-root.active {
   border-color: lawngreen;
 }
-.multi-icon-picker-root.disabled {
+.multi-icon-picker-dropdown-root.disabled {
   border-color: dimgray;
 }
 
