--- a/ui/core/_shared.scss
+++ b/ui/core/_shared.scss
@@ -218,3 +218,28 @@ $sim-transitions: .2s ease-in;
 	padding: 5px;
 	font-weight: bold;
 }
+
+.labeled-icon-section {
+}
+.labeled-icon-section>fieldset>.multi-icon-picker-root, .labeled-icon-section>fieldset>.icon-input-root {
+	display: flex !important;
+	align-items: center;
+	justify-content: end;
+	font-size: 10px;
+	margin: 2px;
+}
+.labeled-icon-section>fieldset>.multi-icon-picker-root>*, .labeled-icon-section>fieldset>.icon-input-root>* {
+	margin: 0 4px 0 0;
+}
+
+.labeled-icon-section .multi-icon-picker-button {
+	height: 45px;
+	width: 45px;
+	display: block;
+}
+.labeled-icon-section .icon-input {
+	// Needs border*2 extra size because <a> is weird
+	height: 49px;
+	width: 49px;
+	display: block;
+}
