New UI stuff, some rune helpers and rota start

--- a/ui/deathknight/_sim.scss
+++ b/ui/deathknight/_sim.scss
@@ -1,10 +1,10 @@
 // Set color variables which control the site theme.
 .deathknight-sim-ui {
-	--theme-color-primary: #2a044b;
-	--theme-color-background: #480781;
-	--theme-color-background-raw: 11, 0, 21;
+	--theme-color-primary: #583283;
+	--theme-color-background: #1d1626;
+	--theme-color-background-raw: 35, 20, 51;
 	--theme-background-image: url('/wotlk/assets/death_knight_background.jpg');
-	--theme-background-opacity: 0.95;
+	--theme-background-opacity: 0.9;
 	--main-text-color: White;
 }
 
