Clean up UI sections

--- a/ui/core/_individual_sim_ui.scss
+++ b/ui/core/_individual_sim_ui.scss
@@ -172,14 +172,21 @@
   text-align: left;
 }
 
-.race-section > div, .rotation-section > div, .other-settings-section > div {
+.race-section > div:not(.settings-section-iconrow), .rotation-section > div:not(.settings-section-iconrow), .other-settings-section > div:not(.settings-section-iconrow) {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 }
 
-.self-buffs-section>div {
-  display: grid;
+.settings-section-iconrow {
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	justify-content: space-evenly;
+	flex-wrap: wrap;
+	align-items: center;
+}
+.settings-section-iconrow>div {
+	margin: auto !important;
 }
 
 .buffs-section>div {
