--- a/ui/core/_individual_sim_ui.scss
+++ b/ui/core/_individual_sim_ui.scss
@@ -130,6 +130,24 @@
 .settings-section-container {
   position: absolute;
 }
+
+.player-row {
+	display: flex;
+	align-items: center;
+}
+.player-row > span {
+  padding: 4px;
+	margin: 5px;
+}
+.player-row-inputs {
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+}
+.player-row-inputs > * {
+	margin: 2px;
+}
+
 .settings-section {
   border: 2px solid var(--main-text-color);
   padding: 4px;
@@ -180,7 +198,7 @@
 
 .settings-section-iconrow {
 	display: grid;
-	grid-template-columns: repeat(4, 1fr);
+	grid-template-columns: repeat(5, 1fr);
 	justify-content: space-evenly;
 	flex-wrap: wrap;
 	align-items: center;
