--- a/ui/core/_sim_ui.scss
+++ b/ui/core/_sim_ui.scss
@@ -251,9 +251,9 @@ input, select {
 }
 
 .downbin {
-	mask: url(/wotlk/assets/gauge.svg);
+	mask: url(/wotlk/assets/img/gauge.svg);
 	mask-size: cover;
-	-webkit-mask: url(/wotlk/assets/gauge.svg);
+	-webkit-mask: url(/wotlk/assets/img/gauge.svg);
 	-webkit-mask-size: cover;
 	display: inline-block;
 	width: 22px;
