Clean up css for glyphs menu

--- a/ui/core/talents/_glyphs_picker.scss
+++ b/ui/core/talents/_glyphs_picker.scss
@@ -37,7 +37,18 @@
 	letter-spacing: normal;
 }
 
-.selector-modal-list-item-description {
+.glyph-modal .selector-modal-list-item-icon {
+	flex-shrink: 0;
+}
+
+.glyph-modal .selector-modal-list-item-name {
+	flex-shrink: 0;
+	font-size: 14px;
+	font-weight: bold;
+	width: 250px;
+}
+
+.glyph-modal .selector-modal-list-item-description {
   font-size: 14px;
   text-decoration: none !important;
   margin-left: 10px;
