Updated UI to a red theme

--- a/ui/deathknight/_sim.scss
+++ b/ui/deathknight/_sim.scss
@@ -1,10 +1,10 @@
 // Set color variables which control the site theme.
 .deathknight-sim-ui {
-	--theme-color-primary: #583283;
+	--theme-color-primary: #c12d46;
 	--theme-color-background: #1d1626;
-	--theme-color-background-raw: 10, 10, 10;
+	--theme-color-background-raw: 19, 5, 7;
 	--theme-background-image: url('/wotlk/assets/img/death_knight_background.jpg');
-	--theme-background-opacity: 0.85;
+	--theme-background-opacity: 0.9;
 	--main-text-color: White;
 }
 
