--- a/ui/core/_sim_ui.scss
+++ b/ui/core/_sim_ui.scss
@@ -145,7 +145,7 @@ input, select {
   color: var(--main-text-color);
   overflow-y: auto;
   flex: 4;
-  min-width: 250px;
+  min-width: calc(275px + 1vw);
 }
 
 .nav-tabs {
