Add custom rotations

--- a/ui/core/_individual_sim_ui.scss
+++ b/ui/core/_individual_sim_ui.scss
@@ -4,6 +4,7 @@
 @import "./components/boolean_picker";
 @import "./components/character_stats";
 @import "./components/cooldowns_picker";
+@import "./components/custom_rotation_picker";
 @import "./components/detailed_results";
 @import "./components/encounter_picker";
 @import "./components/exporters";
