ui: bg color for class picker dropdown
Signed-off-by: jarves <jarveson@gmail.com>

--- a/ui/core/components/_title.scss
+++ b/ui/core/components/_title.scss
@@ -22,6 +22,7 @@
 	z-index: 9999 !important;
 	grid-template-columns: repeat(1, 1fr);
 	grid-auto-flow: column;
+	background: #111218;
 }
 
 .sim-title-button .sim-title-dropdown-option-container {
