Implement most of remaining healing core

--- a/ui/core/_sim_ui.scss
+++ b/ui/core/_sim_ui.scss
@@ -273,6 +273,10 @@ input, select {
 	display: none !important;
 }
 
+.hide-healing-metrics .healing-metrics {
+	display: none !important;
+}
+
 .hide-experimental .experimental {
 	display: none !important;
 }
