Fix several UI bugs

--- a/ui/core/components/_raid_sim_action.scss
+++ b/ui/core/components/_raid_sim_action.scss
@@ -28,6 +28,9 @@
 .results-sim-dps .topline-result-avg:after {
   content: " DPS";
 }
+.results-sim-hps .topline-result-avg:after {
+  content: " HPS";
+}
 .results-sim-tps .topline-result-avg:after {
   content: " TPS";
 }
