Clean up healing UI so it doesn't show damage-related things

--- a/ui/core/_sim_ui.scss
+++ b/ui/core/_sim_ui.scss
@@ -269,6 +269,10 @@ input, select {
 	background-color: red;
 }
 
+.hide-damage-metrics .damage-metrics {
+	display: none !important;
+}
+
 .hide-threat-metrics .threat-metrics {
 	display: none !important;
 }
