Added Ranks to the FT Icon

--- a/ui/core/components/_icon_enum_picker.scss
+++ b/ui/core/components/_icon_enum_picker.scss
@@ -35,7 +35,8 @@
   background-color: black;
   color: lawngreen;
   border: none;
-  width: 40px;
+  width: auto;
+  max-width: 40px;
   height: auto;
 	padding: 0 2px;
   white-space: nowrap;
