Add support for favorite lists in item pickers

--- a/ui/core/components/_gear_picker.scss
+++ b/ui/core/components/_gear_picker.scss
@@ -99,7 +99,7 @@
 	margin: 5px 20px;
 }
 
-.selector-modal-tab-gem-icon:hover, li.active>.selector-modal-tab-gem-icon {
+.selector-modal-tab-gem-icon:hover, tr.active>.selector-modal-tab-gem-icon {
 	box-shadow:
 			0 0 10px white,
 			0 0 10px white,
@@ -136,10 +136,17 @@
 }
 
 .selector-modal-list {
+	display: block;
 	max-height: 70vh;
 	overflow-y: scroll;
 	overflow-x: hidden;
   padding: 0;
+}
+
+.selector-modal-list-label-cell {
+	width: 100%;
+	display: flex;
+	align-items: center;
 }
 
 .selector-modal-list-item {
@@ -178,11 +185,19 @@
 	letter-spacing: normal;
 }
 
-.selector-modal-list-item-padding {
-	flex-grow: 1;
+.selector-modal-list-item-favorite {
+	margin: 0 10px;
+	font-size: 22px;
+	color: yellow;
+}
+.selector-modal-list-item-favorite:hover {
+	text-shadow:
+		0 0 10px white,
+		0 0 10px white;
 }
 
 .selector-modal-list-item-ep {
+	display: flex;
 	font-size: 16px;
 	font-weight: 800;
 }
@@ -191,4 +206,6 @@
 	display: inline-block;
 	margin: 5px;
 	color: white;
+	min-width: 50px;
+	text-align: right;
 }
