--- a/ui/core/components/_title.scss
+++ b/ui/core/components/_title.scss
@@ -27,6 +27,7 @@
 
 .sim-title-button .sim-title-dropdown-option-container {
 	background: transparent;
+	text-decoration: none;
 }
 
 .sim-title-option {
