--- a/ui/scss/index.scss
+++ b/ui/scss/index.scss
@@ -17,6 +17,7 @@
 @import "bootstrap/scss/containers";
 @import "bootstrap/scss/grid";
 @import "bootstrap/scss/helpers";
+@import "bootstrap/scss/transitions";
 @import "bootstrap/scss/dropdown";
 @import "bootstrap/scss/navbar";
 
