make classes take 50% on medium width

--- a/ui/scss/homepage.scss
+++ b/ui/scss/homepage.scss
@@ -138,7 +138,7 @@
           margin-bottom: 0 !important;
 
           .sim-link, .sim-link-dropdown {
-            flex: 1 100% !important;
+            flex: 1 50%;
             margin-right: 0 !important;
           }
 
@@ -183,6 +183,10 @@
     .homepage-content-container {
       .sim-links-container {
         .sim-links {
+          .sim-link, .sim-link-dropdown {
+            flex: 1 100% !important;
+          }
+
           .sim-link {
             .sim-link-content {
               display: flex;
